IRtest_out/102_line_search.err
irs/102_line_search.ll:95:1: error: expected instruction opcode
next_entry83:
^
1 error generated.
